changed the "dist" target

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,3 +9,8 @@ Changing their description and viewing their contents, as well
 as deleting them from local DB is possible.
 No certificates, nor CA or PKCS#10 functionality yet.
 
+
+
+
+CVS - Changelog, generated with rcs2log
+=======================================
