changes made to compile with qt3 tests with debian 3.0 (woody) were successful see README access violation with qt3 :-(

--- a/README
+++ b/README
@@ -22,6 +22,12 @@ OpenSSl-0.9.6   from http://www.openssl.org
 GNU C++ compiler
 
 
+for debian-woody:
+
+libdb3++-dev
+libssl-dev
+libqt-dev
+
 
 Installation
 ============
