debian fitted for configuring

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xca (0.2.2) unstable; urgency=low
+
+  * see upstream changelog
+
+   -- Christian Hohnstaedt <chohnstaedt@innominate.com>  Fri, 19 Jul 2002 08:50:27 +0200
+   
 xca (0.1.12) unstable; urgency=low
 
   * icons added 
