--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,18 @@
-xca (0.2.13-PRE1) unstable; urgency=low
+xca (0.3.0) unstable; urgency=low
 
+  * several bugfixes and memoryleaks removed
+  * export to TinyCA and "openssl ca" added
+  * switch between tree/plain view in certificate list
+  * notAfter dates in certificate view can be sorted reasonably
   * libdb-4.1.24 and higher is supported
   * The certificate details dialog was redesigned to be a smaller tab-dialog
+  * Mainwindow dialog shrinked
   * Item viewing and import via the commandline is possible
-    so xca can be used as default viewing application for
-  * keys and requests in in your window environment
   * documentation littlebit updated
-  * small changes in configure
+  * changes in configure
   * The wizard invokes the key generation process only if really needed
 
- -- Christian Hohnstaedt <chohnstaedt@innominate.com>  Thu,  6 Feb 2003 11:30:18 +0100
+ -- Christian Hohnstädt <chris@trinity.local>  Wed,  5 Mar 2003 23:56:56 +0100
 
 xca (0.2.12) unstable; urgency=low
 
