--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xca (0.4.4) unstable; urgency=low
+
+  * [ 783853 ] renewal uses 'notBefore' as 'notAfter' date
+  * [ 783830 ] GeneralizedTime-format breaks browsers
+
+ -- Christian Hohnstädt <chris@trinity.local>  Wed,  6 Aug 2003 18:42:58 +0200
+
 xca (0.4.3) unstable; urgency=low
 
   * remove Certificate creation bug (AuthKeyId)
