--- a/README
+++ b/README
@@ -15,11 +15,11 @@ Requirements:
 
 for compilation, you need the following Libraries:
 
-QT-2.2.4        from http://www.troll.no
-BercleyDB-3.3   from http://www.sleepycat.com
-OpenSSl-0.9.6   from http://www.openssl.org
+QT          >=  2.2.4  from http://www.troll.no
+BercleyDB   >=  3.3    from http://www.sleepycat.com
+OpenSSL     >=  0.9.6  from http://www.openssl.org
 
-GNU C++ compiler 2.95
+GNU C++ compiler >= 2.95
 GNU make
 
 
@@ -27,29 +27,76 @@ GNU make
 Installation:
 =============
 
-should be straight forward:
-just type 'configure' to configure the package,
-then type 'make' to compile
-and as root: 'make install'
-for installation
+Configuration:
+--------------
+XCA comes with its own configuration tool that has no
+reationship with the GNU "autoconf" and "automake" tools.
+Just the naming and invokation looks like it. Thus the 
+usual way to configure and build a Package is the same:
+$ ./configure; make; make install
 
-please contact me, if you could compile the program with other
-than the recommended software packages, or on an other platform
-than Linux, or if it failed :-)
+If you have a special setup, you can predefine the following 
+variables: CC, LD, STRIP, CFLAGS, prefix. e.g.:
+$ CC="ccache gcc" STRIP=: CFLAGS="-Wall -g" prefix=/opt/xca ./configure
+to have a cached build and to not strip xca when installing it.
+XCA expects the images and translationfiles in /opt/xca/share/xca/
+and installs itself to /opt/xca/bin/
+
+The header and library files were searched in: 
+"$QTDIR /usr /usr/X11R6 /usr/local"
+and all directorys supplied at the commandline of configure.
+The QT installationdir should not be supplied at the CMDline of configure
+but rather written to the $QTDIR environment variable as it is done 
+with the most distributions.
+
+If for example your shiny recent QT is in /usr/local/lib/qt-X11-3.2.0
+and your new OpenSSL is installed in /usr/local/ssl
+invoke configure like this:
+----------------------------------------------
+$ export QTDIR=/usr/local/lib/qt-X11-3.2.0;
+$ ./configure /usr/local/ssl
+Found: db_cxx.h at /usr/include
+Found: libdb3_cxx.so at /usr/lib
+Found: qobject.h at /home/chris/aaa/src/qt-x11-free-3.2.0/include
+Found: libqt.so at /home/chris/aaa/src/qt-x11-free-3.2.0/lib
+Found: openssl/opensslv.h at /usr/local/ssl/include
+Found: libcrypto.so at /usr/local/ssl/lib
+The Versions of the used libraries are:
+        OpenSSL 0.9.6c 21 dec 2001
+        Sleepycat Software: Berkeley DB 3.2.9: (April  7, 2002)
+        QT: 3.2.0
+$
+---------------------------------------------
+
+This writes all found settings, vars and headers to 
+"Local.mak".
+
+After Local.mak was created by configure it can be used
+and modified for your needs. 
+
+Building:
+-----------
+The Makefiles do support parallel builds (-j)
+targets: 
+all, xca :  builds the app
+install  :  installs the app
+headers  :  UICs the headers in ui/ needed by other files.
+clean    :  deletes all builded files
+distclean:  deletes also Local.mak
+
+
+Installing:
+------------
+make destdir=/my/virtual/root
+provides /my/virtual/root/ as root-directory for installation
+to be mounted by others as root or to be chroot'ed to.
 
 
 
 Running/invoking:
 =================
 
-xca can be invoked with one argument (next to the usual X args) which is
-the filename of the database created/used in ~/xca/ the default 
-filename is xca.db
-
-When running the software its usage should be straight forward.
-Some functions can be reached via a context-menu by right-clicking
-the cert/request/key.
-
+a detailed manual can be found in docs/
 
 
 ----------------------------------------------------------
