--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+xca (0.4.6) unstable; urgency=low
+
+  * Netscape SPKAC support added
+  * Country is State or Province
+  * xca.dsp: WIN32 changes from Ilya
+  * New configure added, Makefile.in's purged and one configuration:
+    "Local.mak" for flags and compilers.
+  * SmartCard Logon OID added
+  * Fixed bugs:
+  * [ 846052 ] Tab order in Certificate Netscape extensions is wrong
+  * [ 845800 ] CRL Generation problem for Netscape
+  * [ 836967 ] Unable to specify alternate database
+  * [ 843725 ] xca dies when opened with a pem key as argument
+  * [ 789374 ] Bad encoding in misc/xca.desktop
+  
+ -- Christian Hohnstaedt <chohnstaedt@innominate.com>  Tue, 25 Nov 2003 11:58:07 +0100
+
 xca (0.4.5) unstable; urgency=low
 
   * more german translations
