--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,5 @@
 xca (0.4.6) unstable; urgency=low
 
-  * Support for UTF8 in x509name
-  * Netscape SPKAC support added
   * Country is State or Province
   * xca.dsp: WIN32 changes from Ilya
   * New configure added, Makefile.in's purged and one configuration:
@@ -13,8 +11,11 @@ xca (0.4.6) unstable; urgency=low
   * [ 836967 ] Unable to specify alternate database
   * [ 843725 ] xca dies when opened with a pem key as argument
   * [ 789374 ] Bad encoding in misc/xca.desktop
+  * by Wolfgang Glas <wolfgang.glas@ev-i.at>:
+    - Support for UTF8 in x509name
+    - Netscape SPKAC support added
 
- -- Christian Hohnstaedt <chohnstaedt@innominate.com>  Tue, 25 Nov 2003 17:10:23 +0100
+ -- Christian Hohnstädt <chris@trinity.local>  Tue, 25 Nov 2003 18:28:02 +0100
 
 xca (0.4.5) unstable; urgency=low
 
