--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,12 @@
 Christian Hohnstädt <christian@hohnstaedt.de>
 	Programming, translation, testing
 
-
 Kerstin Steinhauff <tine@kerstine.de> 
-	Arts, graphics, testing, SuSE rpm building
-
+	Arts, Graphics
 
 Ilya Kozhevnikov <ilya@ef.unn.ru>
 	Compiling and testing the WIN32-port
+	implementing the W32 registry stuff
+
+Wolfgang Glas <wolfgang.glas@ev-i.at>
+	Adding SPKAC support and testing
