--- a/README
+++ b/README
@@ -30,17 +30,23 @@ Installation:
 Configuration:
 --------------
 XCA comes with its own configuration tool that has no
-reationship with the GNU "autoconf" and "automake" tools.
+relationship with the GNU "autoconf" and "automake" tools.
 Just the naming and invokation looks like it. Thus the 
 usual way to configure and build a Package is the same:
 $ ./configure; make; make install
 
 If you have a special setup, you can predefine the following 
-variables: CC, LD, STRIP, CFLAGS, prefix. e.g.:
+variables: CC, LD, STRIP, CFLAGS, prefix, basedir. e.g.:
 $ CC="ccache gcc" STRIP=: CFLAGS="-Wall -g" prefix=/opt/xca ./configure
 to have a cached build and to not strip xca when installing it.
 XCA expects the images and translationfiles in /opt/xca/share/xca/
 and installs itself to /opt/xca/bin/
+
+"basedir" is the Directory where user dependend settings and her
+database is stored.
+There should not be any need to change this.
+If it is not defined it defaults to $HOME/xca this can be changed at runtime
+with the switch -b.
 
 The header and library files were searched in: 
 "$QTDIR /usr /usr/X11R6 /usr/local"
@@ -53,7 +59,7 @@ If for example your shiny recent QT is in /usr/local/lib/qt-X11-3.2.0
 and your new OpenSSL is installed in /usr/local/ssl
 invoke configure like this:
 ----------------------------------------------
-$ export QTDIR=/usr/local/lib/qt-X11-3.2.0;
+$ export QTDIR=/home/chris/aaa/src/qt-x11-free-3.2.0
 $ ./configure /usr/local/ssl
 Found: db_cxx.h at /usr/include
 Found: libdb3_cxx.so at /usr/lib
