debian menu added, version 4.7-RC1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+xca (0.4.7-RC1) unstable; urgency=low
+
+  * debian menu-entry added
+  * Open and closing of different databases
+  * Menu added
+  * German translation
+  * CRLs will revoke existing certs
+  * memory leaks removed
+  * support for other compiled in basedir on unix
+  * Authority info access added
+     Certificate policies still pending :-(
+  * additional (private) oids can be registered in oids.txt
+  * OIDs for extended key usage and Distinguished name are
+    now read from eku.txt and dn.txt respectively.
+  * About dialog and help window added.
+  * Reqdetail is now tabdialog
+  * 
+
+ -- Christian Hohnstädt <christian@hohnstaedt.de>  Thu,  5 Feb 2004 23:43:40 +0100
+
 xca (0.4.6) unstable; urgency=low
 
   * Country is State or Province
