--- a/doc/xca.man
+++ b/doc/xca.man
@@ -3,33 +3,21 @@
 xca \- A GUI for handling X509 certificates, RSA keys, PKCS#10 Requests and CRLs.
 .SH SYNOPSIS
 .B xca
-[
-.I -v
-] [
-.I -k
-] [
-.I -r
-] [
-.I -c
-] [
-.I -p
-] [
-.I -7
-] [
-.I -l
-] [
-.I -t
-] [
-.I -d
-] [
-.I -b
-] [
-.I -x
-]
+.RI [ -v ]
+.RI [ -k ]
+.RI [ -r ]
+.RI [ -c ]
+.RI [ -p ]
+.RI [ -7 ]
+.RI [ -l ]
+.RI [ -t ]
+.RI [ -d ]
+.RI [ -b ]
+.RI [ -x ]
 .br
 .SH "DESCRIPTION"
-The Program uses a Berkeley db for storage and supports RSA keys,
-Certificate signing requests (PKCS#10) and Certificates (X509v3)
+This application is intended as CA, certificate- and Key store. It uses a Berkeley db for storage to have everything in one file.
+Supported are Certificate signing requests (PKCS#10), Certificates (X509v3), RSA keys and Certificate revokation lists.
 The signing of requests, and the creation of selfsigned certificates
 is supported. Both can use templates for simplicity.
 The PKI structures can be imported and exported in several formats
@@ -39,17 +27,17 @@ like PKCS#12, PEM, DER, PKCS#8, PKCS#7.
 .B xca
 is a program that...
 .SH OPTIONS
-The programs follow the usual GNU command line syntax, with long
-options starting with two dashes (`-').
 A summary of options are included below.
-For a complete description, see the Info files.
 .TP
 .B \-v 
 Show version information and exit.
 .TP
 .B \-r
-expect all following non-option arguments to be Certificate signing requests or SPKAC requests and to import them by first showing an import dialog.
-Show version of program.
+expect all following non-option arguments to be Certificate signing requests
+or SPKAC requests and to import them.
+.TP
+.B \-k
+expect all following non-option arguments to be Certificates and import them.
 .SH "SEE ALSO"
 .SH AUTHOR
 This manual page was written by Christian Hohnstaedt <chohnstaedt@innominate.com>
