--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+  * add X509 V3 extensions to PKCS#10 requests
   * add "validation" function for editable extensions below
   * add "edit" buttons for subject/issuer alt. name,
     crl dist. point and cert. auth. info access
