documentation and key export updates

--- a/README
+++ b/README
@@ -15,8 +15,8 @@ Requirements:
 
 for compilation, you need the following Libraries:
 
-QT          >=  4.0.0  from http://www.troll.no
-OpenSSL     >=  0.9.6  from http://www.openssl.org
+QT          >=  4.2.1  from http://www.troll.no
+OpenSSL     >=  0.9.7  from http://www.openssl.org
 
 GNU C++ compiler >= 3.1.0
 GNU make
@@ -35,17 +35,11 @@ usual way to configure and build a Package is the same:
 $ ./configure; make; make install
 
 If you have a special setup, you can predefine the following
-variables: CC, LD, STRIP, CFLAGS, prefix, basedir. e.g.:
+variables: CC, LD, STRIP, CFLAGS, prefix. e.g.:
 $ CC="ccache gcc" STRIP=: CFLAGS="-Wall -g" prefix=/opt/xca ./configure
 to have a cached build and to not strip xca when installing it.
-XCA expects the images and translationfiles in /opt/xca/share/xca/
+XCA expects the translationfiles in /opt/xca/share/xca/
 and installs itself to /opt/xca/bin/
-
-"basedir" is the Directory where user dependend settings and her
-database is stored.
-There should not be any need to change this.
-If it is not defined it defaults to $HOME/xca this can be changed at runtime
-with the switch -b.
 
 The header and library files were searched in:
 "$QTDIR /usr /usr/X11R6 /usr/local"
@@ -54,22 +48,18 @@ The QT installationdir should not be supplied at the CMDline of configure
 but rather written to the $QTDIR environment variable as it is done
 with the most distributions.
 
-If for example your shiny recent QT is in /usr/local/lib/qt-X11-3.2.0
+If for example your shiny recent QT is in /home/chris/aaa/src/qt4
 and your new OpenSSL is installed in /usr/local/ssl
 invoke configure like this:
 ----------------------------------------------
-$ export QTDIR=/home/chris/aaa/src/qt-x11-free-3.2.0
+$ export QTDIR=/home/chris/aaa/src/qt4
 $ ./configure /usr/local/ssl
-Found: db_cxx.h at /usr/include
-Found: libdb3_cxx.so at /usr/lib
-Found: qobject.h at /home/chris/aaa/src/qt-x11-free-3.2.0/include
-Found: libqt.so at /home/chris/aaa/src/qt-x11-free-3.2.0/lib
+Found: qobject.h at /home/chris/aaa/src/qt4/include
+Found: libqt.so at /home/chris/aaa/src/qt4/lib
 Found: openssl/opensslv.h at /usr/local/ssl/include
 Found: libcrypto.so at /usr/local/ssl/lib
 The Versions of the used libraries are:
-        OpenSSL 0.9.6c 21 dec 2001
-        Sleepycat Software: Berkeley DB 3.2.9: (April  7, 2002)
-        QT: 3.2.0
+.....
 $
 ---------------------------------------------
 
@@ -88,14 +78,17 @@ install  :  installs the app
 headers  :  UICs the headers in ui/ needed by other files.
 clean    :  deletes all builded files
 distclean:  deletes also Local.mak
-
+xca.exe  :  W32 executable
+setup.exe:  W32 installer
+xca.app  :  OS-X application
+xca.dmg  :  OS-X installation image
 
 Installing:
 ------------
 make destdir=/my/virtual/root
 provides /my/virtual/root/ as root-directory for installation
-to be mounted by others as root or to be chroot'ed to.
-
+to be mounted by others as root or as installdir for
+package builders.
 
 
 Running/invoking:
