--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+  * sort serial numbers numerically and not lexicographically
   * add build support for cygwin and mingw-cross
   * delete rpm/ and debian/ subdirs
   * Port to QT4 and openssl 0.9.8
