--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+  * add support for predefined templates as there was in 0.5.1
   * fix cmdline import of crypto items
   * add undelete feature for deleted items
   * fix database shrinking of curent db during opening of new db
