fix dialog sizes for long DNs and automatic resizing

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+  * fix dialog sizes for long DNs
   * move hash algo into signer box [ 1656260 ]
   * make QA serial a compile time option
   * fix date generation and warn if generalized time is used
