--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+  * add RFC2253 representation of subject and issuer
+  * to copy&paste
   * fix dialog sizes for long DNs
   * move hash algo into signer box [ 1656260 ]
   * make QA serial a compile time option
