--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+  * set initial sorting to ascending order
   * add RFC2253 representation of subject and issuer
   * to copy&paste
   * fix dialog sizes for long DNs
